--- a/aegis_start/manifest.json
+++ b/aegis_start/manifest.json
@@ -11,12 +11,16 @@
     "alarms",
     "downloads",
     "sidePanel"
+],
+ "host_permissions": [
+    "https://api.aegis.builders/*",
+    "wss://api.aegis.builders/*"
   ],
-  "host_permissions": [
-    "https://aegis.builders/*"
-  ],
+  
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' https://aegis.builders;"
+  "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' https://api.aegis.builders wss://api.aegis.builders;",
+  "sandbox": "sandbox allow-scripts; script-src 'self'; connect-src https://api.aegis.builders wss://api.aegis.builders;",
+  "content_scripts": "script-src 'self'; connect-src 'self' https://api.aegis.builders wss://api.aegis.builders;"
   },
   "background": {
     "service_worker": "background.js"
