--- a/antivirus-core/app/env.env
+++ b/antivirus-core/app/env.env
@@ -20,3 +20,7 @@ FROM_EMAIL=1111ffff2@mail.ru
 YOOKASSA_SHOP_ID=1208526
 YOOKASSA_SECRET_KEY=live_Xcb-Qt-JXPHv292nUC-Xw5YxDRjFojsYq0Q30HDQQMg
 YOOKASSA_TEST_MODE=False
+
+# Путь к единой базе данных (для бота и backend)
+# БД будет создана автоматически при первом запуске
+DATABASE_PATH=/opt/aegis/data/aegis.db
