fix(auth) - methods dublicate cleared

--- a/antivirus-core/app/env.env
+++ b/antivirus-core/app/env.env
@@ -10,14 +10,14 @@ LOG_LEVEL=INFO
 LOG_ROTATION_DAYS=7
 LOG_MAX_SIZE_MB=100
 
-SMTP_HOST=smtp.mail.ru
-SMTP_PORT=587
-SMTP_USER=1111ffff2@mail.ru
-SMTP_PASS=123nikita12364
-FROM_EMAIL=1111ffff2@mail.ru
 
 YOOKASSA_SHOP_ID=1208526
 YOOKASSA_SECRET_KEY=live_Xcb-Qt-JXPHv292nUC-Xw5YxDRjFojsYq0Q30HDQQMg
 YOOKASSA_TEST_MODE=False
 
 DATABASE_PATH=/opt/aegis/data/aegis.db
+
+SMTP_HOST=smtp.yandex.ru
+SMTP_PORT=587
+SMTP_USER=noreply@aegis.builders
+SMTP_PASS=ujdquewunsmkxsix
