feat(database): add PostgreSQL support and decouple DB from backend

--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,30 @@
+# python
 __pycache__/
 *.pyc
 
+# logs
 *.log
 logs/
 **/logs/
 
-*.db
-
+# env
 .env
-*.env
+.env.*
 env.env
 
-data/cache_blacklist.jsonl
+# databases & dumps
+*.db
+*.sqlite
+*.sqlite.sql
+
+# runtime cache
+data/cache_*.jsonl
 antivirus-core/app/data/cache.db
 
-testci*.txt
-testfile*.md
-.DS_Store
-.vscode/
-
-<<<<<<< HEAD
+# virtualenvs
 venv/
 .venv/
-__pycache__/
-*.pyc
-
-*.log
-logs/
-**/logs/
-
-*.db
-
-.env
-*.env
-env.env
-
-data/cache_blacklist.jsonl
-antivirus-core/app/data/cache.db
-
-testci*.txt
-testfile*.md
-.DS_Store
-.vscode/
-=======
-# virtual environments
-venv/
 antivirus-core/venv/
 
-# runtime cache files
-data/cache_*.jsonl
->>>>>>> 8243cf2 (chore: ignore venv and runtime cache files)
+.DS_Store
+.vscode/
