feat(database): decouple database from backend runtime
* fix(frontend): new request

* fix(background): window method deleted

* fix(background): host_permissions changed

* fix(warmUpConnection): async function changed

* fix(background): The 404 error still appears at just the root of the site

* fix(background): When the extension starts, it makes a "dummy" request  since the API doesn't have a handler for the "root", the server returns a 404.

* fix(background): The 404 error doesn't go away because in the Manifest V3 code the service worker constantly "wakes up" and calls the warmUpConnection() function, which is hardcoded to the site root.

* fix(background):  The reason is that background.js has this request hardcoded into three different regions, and if you fix one, the other two will continue to "garbage" the console.

* fix(background): now error 403 (Forbidden) but now the server rejects the request.

* 404_Back_and_Front

* 404_Back_and_Front

* chore: ignore venv and runtime cache files

* ci: dev pipeline test

* test: dev deploy

* LimitKey

* feat(database): add PostgreSQL support and decouple DB from backend

---------

Co-authored-by: Artemy579 <maslovartem223@gmail.com>
Co-authored-by: Nikita <vitherplay228@mail.ru>

--- a/aegis_start/manifest.json
+++ b/aegis_start/manifest.json
@@ -12,12 +12,14 @@
     "sidePanel"
   ],
   "host_permissions": [
-    "https://api.aegis.builders/*",
-    "wss://api.aegis.builders/*"
-  ],
+  "https://api.aegis.builders/*",
+  "wss://api.aegis.builders/*",
+  "https://api-dev.aegis.builders/*",
+  "wss://api-dev.aegis.builders/*"
+],
   
   "content_security_policy": {
-  "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' https://api.aegis.builders wss://api.aegis.builders;",
+  "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' https://api.aegis.builders wss://api.aegis.builders https://api-dev.aegis.builders wss://api-dev.aegis.builders;",
   "sandbox": "sandbox allow-scripts; script-src 'self'; connect-src https://api.aegis.builders wss://api.aegis.builders;",
   "content_scripts": "script-src 'self'; connect-src 'self' https://api.aegis.builders wss://api.aegis.builders;"
   },
