--- a/antivirus-core/requirements.txt
+++ b/antivirus-core/requirements.txt
@@ -4,6 +4,24 @@ pydantic>=1.10,<3
 aiohttp>=3.9
 python-multipart>=0.0.6
 typing_extensions>=4.8
+psycopg2-binary>=2.9
+PyJWT>=2.8
+python-jose[cryptography]>=3.3
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
