Fix admin auth: exclude /admin endpoints from JWT (#11)
* WIP: emergency save of server changes after dev/prod desync

* WIP Wed Dec 31 12:44:59 MSK 2025

* dev: website changes restored after main desync

* chore: cleanup workflows

* refactor: rename aegis to avqon and normalize project structure

* fix(ci): restore workflows and correct paths

* trigger dev deploy

* test(ci): dev deploy check

* fix: prod deploy use avqon paths

* changes in deplot-prod

* fix(ci): clean deploy-dev workflow

* Token

---------

Co-authored-by: Nikita <vitherplay228@mail.ru>

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -20,12 +20,20 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no \
             ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-          set -e
 
-          cd /opt/avqon-dev
-          git fetch origin
-          git checkout dev
-          git reset --hard origin/dev
+            set -e
+
+            echo "===> Update DEV code"
+            cd /opt/avqon-dev
+
+            git fetch origin
+            git checkout dev
+            git reset --hard origin/dev
+
+            echo "===> Restart DEV backend"
+            sudo systemctl restart avqon-backend-dev
+
+            echo "===> DEV deploy done"
 
           sudo systemctl restart avqon-backend-dev
           echo "DEV deploy done"
