--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -2,8 +2,13 @@ name: Deploy PROD
 
 on:
   push:
-    tags:
-      - 'v*.*.*'
+    branches:
+      - main
+# ИЛИ (лучше):
+# on:
+#   push:
+#     tags:
+#       - 'v*.*.*'
 
 jobs:
   deploy:
@@ -17,14 +22,11 @@ jobs:
 
       - name: Deploy PROD
         run: |
-          ssh -o StrictHostKeyChecking=no \
-              -o UserKnownHostsFile=/dev/null \
-              ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
           set -e
           cd /opt/avqon-prod
           git fetch origin
           git checkout main
           git reset --hard origin/main
           sudo systemctl restart avqon-backend-prod
-          echo "PROD deploy done"
           EOF
