Refactor PROD deployment workflow
Updated deployment script to include 'git pull' and additional SSH options.

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,32 +1,13 @@
-name: Deploy PROD
-
-on:
-  push:
-    branches:
-      - main
-# ИЛИ (лучше):
-# on:
-#   push:
-#     tags:
-#       - 'v*.*.*'
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: webfactory/ssh-agent@v0.8.0
-        with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-
-      - name: Deploy PROD
-        run: |
-          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-          set -e
-          cd /opt/avqon-prod
-          git fetch origin
-          git checkout main
-          git reset --hard origin/main
-          sudo systemctl restart avqon-backend-prod
-          EOF
+- name: Deploy PROD
+  run: |
+    ssh -o StrictHostKeyChecking=no \
+        -o UserKnownHostsFile=/dev/null \
+        ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+    set -e
+    cd /opt/avqon-prod/antivirus-core
+    git fetch origin
+    git checkout main
+    git pull origin main
+    sudo systemctl restart avqon-backend-prod
+    echo "PROD deploy done"
+    EOF
