--- a/antivirus-core/requirements.txt
+++ b/antivirus-core/requirements.txt
@@ -1,49 +1,34 @@
-fastapi>=0.110
-uvicorn[standard]>=0.23
-pydantic>=1.10,<3
-aiohttp>=3.9
-python-multipart>=0.0.6
-typing_extensions>=4.8
-psycopg2-binary>=2.9
-PyJWT>=2.8
-python-jose[cryptography]>=3.3
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.0
+async-timeout==5.0.1
+attrs==25.4.0
+click==8.3.1
+dnspython==2.8.0
+email-validator==2.3.0
+exceptiongroup==1.3.1
+fastapi==0.128.0
+frozenlist==1.8.0
+h11==0.16.0
+httptools==0.7.1
+idna==3.11
+multidict==6.7.0
+propcache==0.4.1
+psycopg2-binary==2.9.11
+pydantic==2.12.5
+pydantic_core==2.41.5
+PyJWT==2.10.1
+python-dotenv==1.2.1
+python-multipart==0.0.21
+PyYAML==6.0.3
+starlette==0.50.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+uvicorn==0.40.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
+yarl==1.22.0
